--- a/01-pure-react/index.html
+++ b/01-pure-react/index.html
@@ -13,6 +13,7 @@
     <script>
       function App() {
         // const time = new Date().toLocaleTimeString();
+        // const time = new Date().toLocaleTimeString();
         const [time, setTime] = React.useState(new Date().toLocaleTimeString());
 
         React.useEffect(function () {
